install mysql2 and edit puma.rb

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
 	<% end %>
 	<div>
 		<%= link_to root_path do %>
-			<img src="/assets/logo.jpg" alt="非表示" , class="logo">
+			<%= img_tag "logo.jpg", id: "assets", class: "image"%>
 		<% end %>
 	</div>
 	<div>
