--- a/app/views/layouts/_adminheader.html.erb
+++ b/app/views/layouts/_adminheader.html.erb
@@ -28,7 +28,7 @@
 <div class="side-menu">
 	<% if admin_signed_in? %>
 		<div>
-			<img src="/assets/logo.jpg", class="logo">
+			<%= img_tag "logo.jpg", id: "assets", class: "image"%>
 		</div>
 		<div>
 			<ul class="list">
@@ -42,7 +42,7 @@
 		</div>
 	<% else %>
 		<div>
-			<img src="/assets/logo.jpg", class="logo">
+			<%= img_tag "logo.jpg", id: "assets", class: "image"%>
 		</div>
 			<div>
 				<ul class="list">
