--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
 	<% end %>
 	<div>
 		<%= link_to root_path do %>
-			<%= img_tag "logo.jpg", id: "assets", class: "image"%>
+			<%= image_tag "logo.jpg", id: "assets", class: "image"%>
 		<% end %>
 	</div>
 	<div>
