--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,11 +14,11 @@
     </div>
     <div class="col-lg-6 photo", style = "height: 500px; padding: 5px 5px 0 0;">
           <div class="theTarget">
-              <div style="background-image: #{asset-path('aimer.jpg')}"></div>
-              <div style="background-image: #{asset-path('clear.jpg')}"></div>
-              <div style="background-image: #{asset-path('cocooil.jpg')}"></div>
-              <div style="background-image: #{asset-path('plqml.jpg')}"></div>
-              <div style="background-image: #{asset-path('ronn.jpg')}"></div>
+              <div style="background-image: url( 'aimer.jpg' )"></div>
+              <div style="background-image: url('clear.jpg')"></div>
+              <div style="background-image: url('cocooil.jpg')"></div>
+              <div style="background-image: url('plqml.jpg')"></div>
+              <div style="background-image: url('ronn.jpg')"></div>
           </div>¨
           <%= javascript_include_tag('jquery.min') %>
           <%= javascript_include_tag('skippr.min') %>
