--- a/app/views/layouts/_adminheader.html.erb
+++ b/app/views/layouts/_adminheader.html.erb
@@ -1,5 +1,5 @@
 <style>
-	.logo{
+	.images{
 		display: block;
  		margin: 0 90px 50px 90px;
 	}
@@ -28,7 +28,7 @@
 <div class="side-menu">
 	<% if admin_signed_in? %>
 		<div>
-			<%= image_tag "logo.jpg", id: "assets", class: "image"%>
+			<%= image_tag "logo.jpg", id: "assets", class: "images"%>
 		</div>
 		<div>
 			<ul class="list">
