--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <style>
-	.image{
+	.images{
 		display: block;
  		margin: 0 90px 50px 90px;
 	}
@@ -33,7 +33,7 @@
 	<% end %>
 	<div>
 		<%= link_to root_path do %>
-			<%= image_tag "logo.jpg", id: "assets", class: "image"%>
+			<%= image_tag "logo.jpg", id: "assets", class: "images"%>
 		<% end %>
 	</div>
 	<div>
