--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,11 +5,11 @@
 </style>
 
 <div class="row">
-	<div class="col-lg-3 ", style ="margin: 0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/header" %>
 	</div>
-	<div class="col-lg-5 ", style =" margin: 0; padding: 0;">
-		<div style ="margin: 300px 0 0 100px;">
+	<div class="col-lg-9", style = "margin-top: 70px;">
+		<div>
 			<%= attachment_image_tag @product, :image, :fill, 500,500 %>
 			<h3><%= @product.name %></h3>
 			<p class="introduction"><%= @product.introduction%></p>
