--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-	<div class="col-lg-3", style="margin: 0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/header" %>
 	</div>
-	<div class="col-lg-9", style="margin: 0; padding: 0;">
-		<div style ="margin-top: 70px;">
+	<div class="col-lg-9", style="margin-top: 70px;">
+		<div>
 			<h1>ユーザ編集画面</h1>
 			<%= form_for(@user, url:user_path(@user), method: :patch) do |f| %>
 				<%= link_to leave_user_path(@user), method: :patch do %>
