--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-	<div class="col-lg-3", style="margin:0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
 	</div>
-	<div class ="col-lg-9", style="margin:0; padding: 0;">
-		<div style="margin-top: 90px;">
+	<div class ="col-lg-9", style="margin-top:90px;">
+		<div>
 			<%= form_for(@genre, url: admins_genre_path, method: :patch) do |f| %>
 				<div class="form-group">
 					<label>ジャンル</label>
