--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-	<div class="col-lg-3", style= "margin: 0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
 	</div>
-	<div class="col-lg-9", style="margin: 0; padding: 0;">
-		<div style ="margin-top: 90px; padding-right: 60px;">
+	<div class="col-lg-9", style="margin-top: 70px; ">
+		<div>
 			<h1>ジャンル管理画面</h1>
 			<%= form_for(@genre, url:admins_genres_path) do |f| %>
 				<div class="form-group">
