--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-	<div class="col-lg-3", style= "margin: 0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
 	</div>
-	<div class="col-lg-9", style="margin: 0; padding: 0;">
-		<div style ="margin-top: 90px; padding-right: 10px;">
+	<div class="col-lg-9", style="margin-top: 70px;">
+		<div>
 			<h1>注文履歴一覧</h1>
 			<table class="table">
 					<tr>
