--- a/app/views/admins/products/edit.html.erb
+++ b/app/views/admins/products/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-	<div class="col-lg-3", style = "margin: 0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
 	</div>
-	<div class="col-lg-9", style = "margin-top: 60px; padding-left: 30px;">
+	<div class="col-lg-9", style = "margin-top: 70px;">
 		<h1>商品編集画面</h1>
 		<%= form_for(@product, url: admins_product_path, method: :patch) do |f| %>
 		<%= attachment_image_tag @product, :image, :fill, 150, 150 %>
