--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-	<div class="col-lg-3", style = "margin: 0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
 	</div>
-	<div class="col-lg-9", style = "margin-top: 65px;">
+	<div class="col-lg-9", style = "margin-top: 70px;">
 		<h1>商品一覧ページ</h1>
 		<%= link_to new_admins_product_path do %>
 			<span>新規登録画面へ</span>
