--- a/app/views/admins/products/show.html.erb
+++ b/app/views/admins/products/show.html.erb
@@ -2,8 +2,8 @@
 	<div class="col-lg-3">
 		<%= render "layouts/adminheader" %>
 	</div>
-	<div class="col-lg-9", style = "margin: 0; padding: 0;">
-		<div style = "margin: 180px 0 0 100px;">
+	<div class="col-lg-9", style = "margin-top: 70px;">
+		<div>
 		<%= attachment_image_tag @product, :image, :fill, 500, 500 %>
 		<table>
 			<tr>
