--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-	<div class="col-lg-3", style="margin: 0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
  	</div>
- 	<div class="col-lg-9 user", style="margin-top:60px; padding: 0;">
+ 	<div class="col-lg-9 user", style="margin-top:70px;">
 		<h1>会員一覧画面</h1>
 		<table class="table">
 			<tr>
