--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,11 +7,11 @@
 	}
 </style>
 <div class="row">
-	<div class="col-lg-3", style="margin:0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/header" %>
 	</div>
-	<div class="col-lg-9", style="margin:0; padding:0;">
-		<div style ="margin: 200px 0 0 100px;">
+	<div class="col-lg-9", style="margin-top:70px;">
+		<div>
 			<h1>マイページ</h1>
 			<table>
 					<tr>
