--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 		padding-top: 80px;
 		font-size: 20px;
 	}
-	li{
+	.list li{
 		list-style: none;
 		text-align: center;
 		margin: 150px 0 100px 0;
