--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -12,7 +12,7 @@
 		<h1>注文履歴一覧</h1>
 		<% @order.each do |order| %>
 			<div class="item", style = "width: 260px; height: 280px; margin-top: 10px;">
-				<%= link_to product_path(order.id) do %>
+				<%= link_to product_path(order.product.id) do %>
 					<%= attachment_image_tag serch_product(order), :image, :fill, 180, 180 %><br>
 				<% end %>
 				<span>注文日</span>
