--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
 </style>
 
   <div class="row">
-    <div class="col-lg-3", style ="margin: 0; padding: 0;">
+    <div class="col-lg-3">
       <%= render "layouts/header" %>
     </div>
     <div class="col-lg-6 photo", style = "height: 500px; padding: 5px 5px 0 0;">
@@ -23,7 +23,7 @@
           <%= javascript_include_tag('jquery.min') %>
           <%= javascript_include_tag('skippr.min') %>
     </div>
-    <div class="col-lg-3", style ="margin: 0; padding: 0;">
+    <div class="col-lg-3">
       <div class="col-lg-3 genre", style ="height: 250px;  width: 100%; margin: 0; padding: 80px 0 0 0;">
         <p style="font-size: 20px; text-align: center;">ジャンルで検索する</p>
         <div class="col-lg-11">
