--- a/app/views/admins/home/top.html.erb
+++ b/app/views/admins/home/top.html.erb
@@ -5,10 +5,10 @@
 </style>
 
 <div class="row">
-	<div class="col-lg-3", style= "margin: 0; padding: 0;">
+	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
 	</div>
-	<div class="col-lg-9", style="margin-top:70px; padding-left: 70px;">
+	<div class="col-lg-9", style="margin-top:70px;">
 		<h1>本日購入された商品</h1>
 		<% @order.each do |order| %>
 			<div class="item">
