--- a/app/views/layouts/_adminheader.html.erb
+++ b/app/views/layouts/_adminheader.html.erb
@@ -42,7 +42,7 @@
 		</div>
 	<% else %>
 		<div>
-			<%= image_tag "logo.jpg", id: "assets", class: "image"%>
+			<%= image_tag "logo.jpg", id: "assets", class: "images"%>
 		</div>
 			<div>
 				<ul class="list">
