--- a/app/views/layouts/_adminheader.html.erb
+++ b/app/views/layouts/_adminheader.html.erb
@@ -28,6 +28,7 @@
 <div class="side-menu">
 	<% if admin_signed_in? %>
 		<div>
+			<p style = "text-align: center; font-size: 20px;">管理者ページ</p>
 			<%= image_tag "logo.jpg", id: "assets", class: "images"%>
 		</div>
 		<div>
