--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,11 @@
 
   <div class="row">
     <div class="col-lg-3">
-      <%= render "layouts/header" %>
+      <% if admin_signed_in? %>
+            <%= render 'layouts/adminheader' %>
+        <% else %>
+            <%= render 'layouts/header' %>
+        <% end %>
     </div>
     <div class="col-lg-6 photo", style = "height: 500px; padding: 5px 5px 0 0;">
           <div class="theTarget">
