--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -26,7 +26,7 @@
 							<%= product.name %>
 						<% end %>
 					</td>
-					<td><%= product.price %></td>
+					<td><%= product.price %>円</td>
 					<td><%= product.genre.name %></td>
 					<td>
 						<% if product.is_stopped? %>
