--- a/app/views/admins/products/show.html.erb
+++ b/app/views/admins/products/show.html.erb
@@ -4,38 +4,38 @@
 	</div>
 	<div class="col-lg-9", style = "margin-top: 70px;">
 		<div>
-		<%= attachment_image_tag @product, :image, :fill, 500, 500 %>
-		<table>
-			<tr>
-				<th>商品名</th>
-				<td><%= @product.name %></td>
-			</tr>
-			<tr>
-				<th>商品説明</th>
-				<td><%= @product.introduction %></td>
-			</tr>
-			<tr>
-				<th>ジャンル</th>
-				<td><%= @product.genre.name %></td>
-			</tr>
-			<tr>
-				<th>価格(税込価格)</th>
-				<td><%= addTax(@product.price) %> (<%=@product.price%>)円</td>
-			</tr>
-			<tr>
-				<th>販売ステータス</th>
-				<td>
-					<% if @product.is_stopped == false %>
-						販売中
-					<% elsif @product.is_stopped == true %>
-						販売停止
-					<% end %>
-				</td>
-			</tr>
-		</table>
-		<%= link_to edit_admins_product_path(@product.id) do %>
-			<span>編集する</span>
-		<% end %>
+			<%= attachment_image_tag @product, :image, :fill, 500, 500 %>
+			<table>
+				<tr>
+					<th>商品名</th>
+					<td><%= @product.name %></td>
+				</tr>
+				<tr>
+					<th>商品説明</th>
+					<td><%= @product.introduction %></td>
+				</tr>
+				<tr>
+					<th>ジャンル</th>
+					<td><%= @product.genre.name %></td>
+				</tr>
+				<tr>
+					<th>価格(税込価格)</th>
+					<td><%= addTax(@product.price) %> (<%=@product.price%>)円</td>
+				</tr>
+				<tr>
+					<th>販売ステータス</th>
+					<td>
+						<% if @product.is_stopped == false %>
+							販売中
+						<% elsif @product.is_stopped == true %>
+							販売停止
+						<% end %>
+					</td>
+				</tr>
+			</table>
+			<%= link_to edit_admins_product_path(@product.id) do %>
+				<span class="btn btn-default">編集する</span>
+			<% end %>
+		</div>
 	</div>
-</div>
 </div>
