--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,9 +11,9 @@
 	<div class="col-lg-9", style = "margin-top: 70px;">
 		<div>
 			<%= attachment_image_tag @product, :image, :fill, 500,500 %>
-			<h3><%= @product.name %></h3>
-			<p class="introduction"><%= @product.introduction%></p>
-			<h4><%= addTax(@product.price)%>円(税込価格)</h4>
+			<h3>商品名　<%= @product.name %></h3>
+			<p class="introduction">商品説明　<%= @product.introduction%></p>
+			<h4>価格　<%= addTax(@product.price)%>円(税込価格)</h4>
 			<% if @product.stock  >  0 %>
 				<%= form_for(@order,url:orders_path) do |f| %>
 					<%= f.hidden_field :product_id %>
