--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,9 +3,18 @@
     display: inline-block;
   }
   .article{
-  overflow-y: scroll;
-}
-
+    overflow-y: scroll;
+  }
+  .col-lg-11 a{
+    color: #555555;
+    text-decoration:none;
+  }
+  .col-lg-11 a:hover {
+    text-decoration:none;
+  }
+  .col-lg-11 a:visited {
+    color:#5bc0de;
+  }
 </style>
 
   <div class="row">
@@ -42,7 +51,7 @@
         <p style="font-size: 20px; text-align: center">記事一覧</p>
         <div class="col-lg-11 article", style ="height: 200px;">
           <% @articles.each do |article|%>
-            <p style= "font-size: 20px; text-align: center" >
+            <p style= "font-size: 20px; text-align: center;" >
               <%= link_to article_path(article.id) do %>
                 <%= article.name %><br>(<%= article.created_at.strftime("%Y-%m-%d")%>)
               <% end %>
