--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,7 +7,7 @@
 			<h1>ユーザ編集画面</h1>
 			<%= form_for(@user, url:user_path(@user), method: :patch) do |f| %>
 				<%= link_to leave_user_path(@user), method: :patch do %>
-			    	<span>退会する</span>
+			    	<span class="btn btn-info" style="margin-bottom: 10px;">退会する</span>
 			    <% end %>
 			    <div class="form-group">
 					<label>姓</label>
