--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -80,7 +80,8 @@
         <% end %>
       </div>
       <% end %>
-      <%= paginate @products %>
-
+      <div class="page">
+        <%= paginate @products %>
+      </div>
     </div>
   </div>
