--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,6 +2,10 @@
 	.item{
 		display: inline-block;
 	}
+	.item a{
+		text-decoration:none;
+		color: #555555;
+	}
 </style>
 
 <div class="row">
@@ -11,27 +15,21 @@
 	<div class="col-lg-9", style ="margin-top: 70px;">
 		<h1>注文履歴一覧</h1>
 		<% @order.each do |order| %>
-			<div class="item", style = "width: 260px; height: 280px; margin-top: 10px;">
+			<div class="item", style = "width: 260px; margin-top: 10px;">
 				<%= link_to product_path(order.product.id) do %>
 					<%= attachment_image_tag serch_product(order), :image, :fill, 180, 180 %><br>
 				<% end %>
 				<span>注文日</span>
 					<span><%= order.created_at.strftime('%Y/%m/%d')%></span><br>
-				<span>注文者</span>
-					<span><%= @user.first_name %></span><br>
-				<span>注文商品</span>
-					<span><%= @product.name %></span><br>
-				<span>注文個数</span>
-					<span><%= order.quantity %>個</span><br>
-				<span>支払い金額</span>
-					<span><%= total_price(order) %></span><br>
-				<span>支払い方法</span>
-					<span><%= order.payment %></span><br>
 				<span>配送状況</span>
 					<span><%= order.delivery_status %></span><br>
-				<span>配送先</span>
-					<span><%= @user.address %></span><br>
+				<%= link_to product_path(order.product.id)do %>
+					<span>再度購入</span>
+				<% end %>
 			</div>
 		<% end %>
+		<div class="page">
+			<%= paginate @order %>
+		</div>
 	</div>
 </div>
