--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,6 +8,7 @@
 	}
 </style>
 
+
 <div class="row">
 	<div class="col-lg-3">
 		<%= render "layouts/header" %>
@@ -16,15 +17,14 @@
 		<h1>注文履歴一覧</h1>
 		<% @order.each do |order| %>
 			<div class="item", style = "width: 260px; margin-top: 10px;">
-				<%= link_to product_path(order.product.id) do %>
-					<%= attachment_image_tag serch_product(order), :image, :fill, 180, 180 %><br>
-				<% end %>
-				<span>注文日</span>
-					<span><%= order.created_at.strftime('%Y/%m/%d')%></span><br>
-				<span>配送状況</span>
-					<span><%= order.delivery_status %></span><br>
+				<%= attachment_image_tag serch_product(order), :image, :fill, 180, 180 %><br>
+				<p> 注文日 <%= order.created_at.strftime('%Y/%m/%d')%></p>
+				<p> 配送状況 <%= order.delivery_status %></p>
 				<%= link_to product_path(order.product.id)do %>
-					<span>再度購入</span>
+					<p>再度購入</p>
+				<% end %>
+				<%= link_to order_path(order.id) do %>
+					<p>注文内容を表示</p>
 				<% end %>
 			</div>
 		<% end %>
