--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,2 +1,34 @@
-<h1>Orders#show</h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+<div class="row">
+	<div class="col-lg-3">
+		<%= render "layouts/header" %>
+	</div>
+	<div class="col-lg-9" style ="margin-top: 70px;">
+		<h1>購入詳細</h1>
+		<div style ="margin: 40px 0 40px 0; font-size: 18px;">
+			<table>
+				<tr>
+					<td><p>注文日 <%= @order.created_at.strftime('%Y/%m/%d')%></p></td>
+				</tr>
+				<tr>
+					<td><p>注文の合計 <%= @order.price %> 円（税込価格）</p></td>
+				</tr>
+			</table>
+		</div>
+		<div class="col-lg-3">
+			<%= attachment_image_tag serch_product(@order) ,:image, :fill, 180, 180 %>
+		</div>
+		<div class="col-lg-6", style = "padding: 10px; font-size: 18px;">
+			<table>
+				<tr>
+					<td><p>商品名: <%= @order.product.name %></p></td>
+				</tr>
+				<tr>
+					<td><p>個数: <%= @order.quantity %></p></td>
+				</tr>
+				<tr>
+					<td><p>注文合計： ¥<%= @order.price %>円</p></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
