--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,12 +10,26 @@
 					<td><p>注文日 <%= @order.created_at.strftime('%Y/%m/%d')%></p></td>
 				</tr>
 				<tr>
-					<td><p>注文の合計 <%= @order.price %> 円（税込価格）</p></td>
+					<td><p>注文の合計 <%=total_price(@order)%> 円（送料込み＋税込価格）</p></td>
+				</tr>
+			</table>
+		</div>
+		<div style="margin: 0 0 40px 0; font-size: 18px;">
+			<table>
+				<tr><p><strong>請求先住所</strong></p></tr>
+				<tr>
+					<td><p>郵便番号: <%= @order.user.postal_code%></p></td>
+				</tr>
+				<tr>
+					<td><p>住所: <%= @order.user.address %></p></td>
+				</tr>
+				<tr>
+					<td><p>携帯番号: <%= @order.user.phone%></p></td>
 				</tr>
 			</table>
 		</div>
 		<div class="col-lg-3">
-			<%= attachment_image_tag serch_product(@order) ,:image, :fill, 180, 180 %>
+			<%= attachment_image_tag serch_product(@order) ,:image, :fill, 300, 300 %>
 		</div>
 		<div class="col-lg-6", style = "padding: 10px; font-size: 18px;">
 			<table>
@@ -26,7 +40,7 @@
 					<td><p>個数: <%= @order.quantity %></p></td>
 				</tr>
 				<tr>
-					<td><p>注文合計： ¥<%= @order.price %>円</p></td>
+					<td><p>注文合計： ¥<%=total_price(@order)%>円</p></td>
 				</tr>
 			</table>
 		</div>
