--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,7 +16,9 @@
 		</div>
 		<div style="margin: 0 0 40px 0; font-size: 18px;">
 			<table>
-				<tr><p><strong>請求先住所</strong></p></tr>
+				<tr>
+					<p><strong>請求先住所</strong></p>
+				</tr>
 				<tr>
 					<td><p>郵便番号: <%= @order.user.postal_code%></p></td>
 				</tr>
