--- a/app/views/article/show.html.erb
+++ b/app/views/article/show.html.erb
@@ -4,8 +4,7 @@
 	</div>
 	<div class="col-lg-9", style=" margin-top: 70px;">
 		<h1>記事詳細画面</h1>
-		<%= @article.created_at.strftime("%Y-%m-%d %H:%M")%>
-		<%= @article.name %>
+		<%= @article.created_at.strftime("%Y/%m/%d")%>
 		<%= @article.introduction.html_safe%>
 	</div>
 </div>
