--- a/app/views/admins/article/edit.html.erb
+++ b/app/views/admins/article/edit.html.erb
@@ -9,7 +9,7 @@
 			<label>記事名</label>
 			<%= f.text_field :name %>
 		</div>
-		<div class="form-group">
+		<div class="form-group col-lg-9">
 			<label>記事の内容</label>
 			<%= f.input :introduction, as: :summernote %>
 		</div>
