--- a/app/views/admins/article/index.html.erb
+++ b/app/views/admins/article/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="row">
 	<div class="col-lg-3">
 		<%= render "layouts/adminheader"%>
@@ -6,20 +7,26 @@
 		<h1>記事一覧画面</h1>
 		<table class="table">
 			<%= link_to new_admins_article_path do %>
-				<span>新規記事登録画面へ</span>
+				<span class="btn btn-info" style="margin-bottom: 10px;">新規記事登録画面へ</span>
 			<% end %>
 			<% @article.each do |article| %>
 				<tr>
 					<th>記事名</th>
 					<th></th>
+					<th></th>
 				</tr>
 				<tr>
+					<td><%= article.name %></td>
 					<td>
 						<%= link_to admins_article_path(article.id) do %>
-							<%= article.name %>
+							<span class="btn btn-success">商品内容を表示</span>
 						<% end %>
 					</td>
-					<td><%= link_to "編集する", edit_admins_article_path(article.id)%></td>
+					<td>
+						<%= link_to edit_admins_article_path(article.id) do %>
+							<span class="btn btn-danger">編集する</span>
+						<% end %>
+					</td>
 				</tr>
 			<% end %>
 		</table>
