--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,13 +48,13 @@
 			</table>
 			<div class="user">
 				<%= link_to edit_user_registration_path do %>
-					<span class="btn btn-info" style="margin: 5px 0 5px 0; ">パスワードを編集する</span>
+					<span class="btn btn-success" style="margin: 5px 0 5px 0; ">パスワードを編集する</span>
 				<% end %><br>
 				<%= link_to edit_user_path(@user) do %>
 					<span class="btn btn-info" style="margin-top: 5px;">登録情報の登録</span>
 				<% end %><br>
 				<%= link_to orders_path do %>
-					<h4 class="btn btn-info" >注文履歴</h4>
+					<h4 class="btn btn-danger" >注文履歴</h4>
 				<% end %>
 			</div>
 		</div>
