--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -39,7 +39,7 @@
 		<div class="col-lg-3" style = "margin-top: 50px;">
 			<%= attachment_image_tag serch_product(@order), :image, :fill, 300, 300 %>
 		</div>
-		<div class="col-lg-6" style = "margin-top: 50px;">
+		<div class="col-lg-6" style = "margin: 50px 0 0 60px;">
 			<table>
 				<tr>
 					<td><p>商品名：<%= @order.product.name %></p></td>
