--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -33,7 +33,7 @@
 		<div class="col-lg-3">
 			<%= attachment_image_tag serch_product(@order) ,:image, :fill, 300, 300 %>
 		</div>
-		<div class="col-lg-6", style = "padding: 10px; font-size: 18px;">
+		<div class="col-lg-6", style = "margin: 20px 0 0 60px; padding: 10px; font-size: 18px;">
 			<table>
 				<tr>
 					<td><p>商品名: <%= @order.product.name %></p></td>
