--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -76,7 +76,7 @@
         <% if product.is_stopped == false %>
           <span>販売中</span>
         <% elsif product.is_stopped == true %>
-          <span>販売停止</span>
+          <span>販売停止中</span>
         <% end %>
       </div>
       <% end %>
