--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,8 +17,10 @@
 			<% if @product.stock  >  0 %>
 				<%= form_for(@order,url:orders_path) do |f| %>
 					<%= f.hidden_field :product_id %>
-					<%= f.submit "購入する" %>
-					<%= f.select :quantity, [*1..@product.stock.to_i] %>
+					<% if @product.is_stopped == false %>
+						<%= f.submit "購入する" %>
+						<%= f.select :quantity, [*1..@product.stock.to_i] %>
+					<% end %>
 				<% end %>
 			<% end %>
 			<% if @product.is_stopped == true %>
